# linuxogotchi

./: CMakeLists.txt  Cargo.toml  README.md
src/: AudioDecoder.cpp  AudioDecoder.h  AudioSink.cpp  AudioSink.h  Main.cpp  MusicPlayer.cpp  MusicPlayer.h  go.mod  go.sum  linuxogotchi.go  main.cpp  main.go  main.rs  music.go  music_test.go
